force-app/main/default/objects/Onboarding__c/fields/Call_Center_Location__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Location__c</fullName>
    <label>Call Center Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offshore</fullName>
            </value>
            <value>
                <fullName>Onshore</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>