force-app/main/default/objects/Onboarding__c/fields/Jornaya__c.field-meta.xml
<CustomField>
    <fullName>Jornaya__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jornaya</label>
    <type>Checkbox</type>
</CustomField>