force-app/main/default/objects/Onboarding__c/fields/Landing_Page_Screen_Shot__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Screen_Shot__c</fullName>
    <label>Landing Page Screen Shot</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>