force-app/main/default/objects/Onboarding__c/fields/Recordings_Provided__c.field-meta.xml
<CustomField>
    <fullName>Recordings_Provided__c</fullName>
    <label>Recordings Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>