force-app/main/default/objects/Onboarding__c/fields/Screen_Shot_Date__c.field-meta.xml
<CustomField>
    <fullName>Screen_Shot_Date__c</fullName>
    <label>Screen Shot Date</label>
    <type>Date</type>
</CustomField>