force-app/main/default/objects/Onboarding__c/fields/Traffic_Direction__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Direction__c</fullName>
    <label>Traffic Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>