force-app/main/default/objects/Onboarding__c/fields/Traffic_Type__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Type__c</fullName>
    <label>Traffic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>