force-app/main/default/objects/Onboarding__c/fields/Trusted_Form__c.field-meta.xml
<CustomField>
    <fullName>Trusted_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trusted Form</label>
    <type>Checkbox</type>
</CustomField>